fix: Add overflow hidden for image viewer

--- a/assets/website/scss/gallery/image_viewer.scss
+++ b/assets/website/scss/gallery/image_viewer.scss
@@ -14,6 +14,9 @@
   border-style: dashed;
   border-radius: 0.75rem;
   border-width: 0.2rem;
+  height: 200px;
+  width: 200px;
+  overflow: hidden;
   transition: transform 0.3s ease-in-out;
   &:hover {
     transform: scale(1.1);
@@ -23,6 +26,9 @@
       width: 100px;
       height: 100px;
     }
+
+    height: 100px;
+    width: 100px;
   }
 }
 
